--- a/pages/index.css
+++ b/pages/index.css
@@ -27,3 +27,10 @@
 @import url(../blocks/comfort/__list/comfort__list.css);
 @import url(../blocks/comfort/__item-title/comfort__item-title.css);
 @import url(../blocks/comfort/__item-text/comfort__item-text.css);
+
+/* WORKS-TOP */
+@import url(../blocks/works-top/works-top.css);
+@import url(../blocks/works-top/__list/works-top__list.css);
+@import url(../blocks/works-top/__item/works-top__item.css);
+@import url(../blocks/works-top/__title/works-top__title.css);
+@import url(../blocks/works-top/__link/works-top__link.css);
