--- a/blocks/footer-contacts/__list/footer-contacts__list.css
+++ b/blocks/footer-contacts/__list/footer-contacts__list.css
@@ -1,8 +1,8 @@
-.works-top__list {
+.footer-contacts__list {
   padding: 0;
-  margin: 54px 0 0 0;
+  margin: 0;
   list-style: none;
+  max-width: 385px;
   display: flex;
-  gap: 16px;
   flex-wrap: wrap;
 }
