--- a/blocks/footer-contacts/__socials/footer-contacts__socials.css
+++ b/blocks/footer-contacts/__socials/footer-contacts__socials.css
@@ -1,8 +1,8 @@
-.works-top__list {
+.footer-contacts__socials {
   padding: 0;
-  margin: 54px 0 0 0;
+  margin: 0;
   list-style: none;
   display: flex;
-  gap: 16px;
   flex-wrap: wrap;
+  gap: 50px;
 }
