Добавил анимации клика, плавного скролла и аватарки хедера

--- a/blocks/footer/__input-icon/_place/footer__input-icon_place_two.css
+++ b/blocks/footer/__input-icon/_place/footer__input-icon_place_two.css
@@ -1,3 +1,3 @@
 .footer__input-icon_place_two {
-  background-image: url("../images/footer/phone-icon.svg");
+  background-image: url("../../../../images/footer/phone-icon.svg");
 }
