--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -1,14 +1,16 @@
 .button {
   position: relative;
   font-weight: 700;
-  border: none;
+  font-size: 12px;
+  line-height: 15px;
   background-color: #ffbb01;
   color: #1b2944;
+  border: 1px solid transparent;
   border-radius: 5px 5px 10px 10px;
   box-shadow: 0px 4px 0px #b68500;
   cursor: pointer;
   overflow: hidden;
-  border: 1px solid transparent;
+  text-transform: uppercase;
   transition: background-color 0.2s, color 0.4s, transform 0.2s, box-shadow 0.2s;
 }
 
