--- a/blocks/footer-link/footer-link.css
+++ b/blocks/footer-link/footer-link.css
@@ -1,7 +1,11 @@
 .footer-link {
-  transition: color 0.5s;
+  transition: color 0.5s, opacity 0.2s;
 }
 
 .footer-link:hover {
   color: #ffc41d;
+}
+
+.footer-link:active {
+  opacity: 0.7;
 }
