--- a/blocks/header/__avatar/header__avatar.css
+++ b/blocks/header/__avatar/header__avatar.css
@@ -1,4 +1,19 @@
+@keyframes avatar-animation {
+  0% {
+    bottom: 0;
+  }
+
+  50% {
+    bottom: 20px;
+  }
+
+  100% {
+    bottom: 0;
+  }
+}
+
 .header__avatar {
+  position: relative;
   display: inline-block;
   border-radius: 50%;
   border: 11px solid #fff;
@@ -6,4 +21,5 @@
   height: 362px;
   object-fit: cover;
   object-position: center;
+  animation: avatar-animation 2.9s ease-in-out infinite;
 }
