--- a/blocks/footer/__form-input/footer__form-input.css
+++ b/blocks/footer/__form-input/footer__form-input.css
@@ -1,5 +1,6 @@
 .footer__form-input {
   position: relative;
+  font-size: 14px;
   padding: 20px 25px 20px 50px;
   width: 100%;
   display: block;
@@ -9,6 +10,11 @@
   box-shadow: inset 0px 3px 10px rgba(199, 199, 199, 0.25);
   box-sizing: border-box;
   transition: border-color 0.2s, background-color 0.2s;
+}
+
+.footer__form-input::placeholder {
+  font-size: 14px;
+  color: #949494;
 }
 
 .footer__form-input:not(:last-child) {
